
core 2.1.3 - not released yet
	* Bugfix: ReplyTo & sender of emails were automatically set to the system mail
	* Added TodoyuTime::time() to set null values to current time
	* Added TodoyuDateRange
	* Added TodoyuArray::createMap()
	* Added: action dispatcher error output contains now also action controller class name
	* Added: Wrappers for rename() and copy() in TodoyuFileManager
	* Changed: Don't require system locale data to set a locale for translation
	* Changed: TodoyuDebug handles now debugging status
	* Removed: Moved continuous integration files to private extension
	* Removed: Username list from debug function. Were never used
	* Removed: Color styles for project (moved to project)
	* Translation: Added polish translation for core
	* Translation: Serbian translation for installer
	* Translation: Polish for core (and all basic extensions)


core 2.1.2 - 2011-09-15
	* Bugfix: Tab layout for chrome fixed
	* Bugfix: labels of dynamic tabs float over bounding box of the tab in chrome (ex: view/edit event)
	* Bugfix: fixed various button icons positions for Chrome
	* Bugfix: #123 Text form fields are ignoring defined default values
	* Bugfix: #185 Deleting an access role in sysmanager caused a fatal error (invalid function call)
	* Bugfix: #189 Problems with character set conversion when server character sets are not utf-8
	* Bugfix: Problems with close handling for popups in IE8. Redesigned callback structure
	* Bugfix: #199 Parsing mysql date (standard date YYYY-MM-DD) failed. Birthdays were not received correct from form field
	* Bugfix: Option class name was not used (invalid variable name in template)
	* Bugfix: Remove event handler attributes from tags in RTE HTML to prevent RSS attacks
	* Bugfix: Select AC value with return key doesn't clear the hidden value field (previously selected items had got lost)
	* Changed: TodoyuTime::parseDateString has now a fallback to strtotime() if date was not recognized before