@@ -7,6 +7,7 @@ core 2.1.3 - not released yet
 	* Added TodoyuArray::createMap()
 	* Added: action dispatcher error output contains now also action controller class name
 	* Added: Wrappers for rename() and copy() in TodoyuFileManager
+	* Added: TodoyuTime:: getYearEnd(), getYearStart()
 	* Changed: Don't require system locale data to set a locale for translation
 	* Changed: TodoyuDebug handles now debugging status
 	* Removed: Moved continuous integration files to private extension
